--- a/index.html
+++ b/index.html
@@ -120,11 +120,11 @@ object-fit:cover;
 
 <div class="cover">
 	<img 
-    src="https://lh3.googleusercontent.com/d/1Csp8sREAjQgMz0cKTJCJtc95up2hwmMw"
+    src="https://lh3.googleusercontent.com/d/1SZEkAMNqTIfIcAtkIzkUFhX87DAoo92e"
     alt="Ebook Cover">
 </div>
 
-<h2>Download your free guide now</h2>
+<h2>Download your free Ebook now</h2>
 
 <form id="leadForm">
 <input type="text" id="name" placeholder="Your Name" required>
@@ -142,14 +142,14 @@ I agree to receive emails & WhatsApp messages for this ebook and future updates.
 </form>
 
 <div class="success" id="successMsg">
-✅ Submitted successfully!
+✅ Your download will begin shortly!
 </div>
 
 </div>
 
 <script>
 const scriptURL="https://script.google.com/macros/s/AKfycbxelU2T1O29hXtl8JuodJD3rrlfuA4CIHYcyFeSuJrNc77Pr-sjZtc-2bc3Tyju3JTb/exec";
-const downloadURL="https://drive.google.com/uc?export=download&id=1ce_42VCP_BhFjXRFrTvwGPYpswDxKyUG";
+const downloadURL="https://drive.google.com/uc?export=download&id=1IdA_oQQYKdgtXYj0ELSpp85Sl7sxJW57";
 
 document.getElementById("leadForm").addEventListener("submit",function(e){
 e.preventDefault();
@@ -232,3 +232,4 @@ document.addEventListener("selectstart", function(e){
 
 </body>
 </html>
+
